# MOOC-utils

./: AGENTS.md  README.md  package-lock.json
.github/scripts/: generate-notes.js
.github/workflows/: release.yml
assignment-solver/: .gitignore  README.md  background.js  content.js  gemini.js  manifest.config.js  manifest.json  package.json  sidepanel.html  sidepanel.js  storage.js  styles.css  vite.config.js
assignment-solver/docs/: architechture.md  data_flow.md  dev_guide.md
notice-reminders/: .env.example  .gitignore  README.md  main.py  models.py  pyproject.toml  swayam_client.py
notice-reminders/app/: __init__.py
notice-reminders/app/api/: main.py
notice-reminders/app/api/routers/: announcements.py  courses.py  notifications.py  search.py  subscriptions.py  users.py
notice-reminders/app/cli/: __init__.py
notice-reminders/app/core/: config.py  database.py  dependencies.py
notice-reminders/app/domain/: models.py
notice-reminders/app/models/: __init__.py  announcement.py  course.py  notification.py  notification_channel.py  subscription.py  user.py
notice-reminders/app/schemas/: announcement.py  course.py  notification.py  notification_channel.py  subscription.py  user.py
notice-reminders/app/scrapers/: __init__.py
notice-reminders/app/services/: announcement_service.py  course_service.py  notification_channel_service.py  notification_service.py  subscription_service.py  swayam_service.py  user_service.py
notice-reminders/data/db/: db.sqlite3
website/: README.md  components.json  next.config.ts  package.json
website/app/: globals.css  (+5 more)
(+65 files in other folders)
